fixed weird spacing in mini-bio

--- a/photographysite/src/app/home/home.component.scss
+++ b/photographysite/src/app/home/home.component.scss
@@ -83,8 +83,7 @@
     }
 
 .image-of-me{
-    width: 30%;
-    margin: 0 10% 0 0;
+    width: 100%;
 }
 
 .mini-bio-container{
