--- a/photographysite/src/app/main-navigation/main-navigation.component.scss
+++ b/photographysite/src/app/main-navigation/main-navigation.component.scss
@@ -2,7 +2,7 @@
 
 .links {
     align-self: center;
-    margin: 1.5em;
+    margin: 1em 1.5em;
     font-size: 1.5em;
     cursor: pointer;
 }
