--- a/photographysite/src/app/portfolio/portfolio.component.scss
+++ b/photographysite/src/app/portfolio/portfolio.component.scss
@@ -1,5 +1,5 @@
 .portfolio-margin {
-    margin: 2em 5em 2em 5em;
+    margin: 1.5em 5em 1.5em 5em;
 }
 
 .limg-spacing {
